--- a/src/index.html
+++ b/src/index.html
@@ -1,36 +1,48 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset=utf-8/>
-<title>Lab 1. Introduction to HTML5 and HLS</title>
-  
-  <!--
-  Embed needed js libraries for video player. Note, libraries needs to be hosted on your server, under /js folder.
-   -->
-  <!--
-  Location for CSS if needed. Note, cascade style sheets needs to be hosted on your server, under /css folder.
-  -->
-   
+  <head>
+    <meta charset="utf-8" />
+    <title>Lab 1. Introduction to HTML5 and HLS</title>
 
+    <link href="//vjs.zencdn.net/7.10.2/video-js.min.css" rel="stylesheet" />
+    <script src="//vjs.zencdn.net/7.10.2/video.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/videojs-contrib-hls@5.15.0/dist/videojs-contrib-hls.min.js"></script>
+  </head>
 
-</head>
-<body>
-  <h1>My first HLS player</h1>
-  
-  <!--
-  location for your player window
-  -->
-  
-	<button type="button">Play</button>
-	<button type="button">Pause</button>
-	<button type="button">Stop</button>
-	<button type="button">Jump to 5 sec forward</button>
-	<button type="button">Jump to 5 sec backwards</button>	
-	
-	<p>Playlist</p>
-	
-	<input type="text" name="url1" size="100" value="https://d2zihajmogu5jn.cloudfront.net/bipbop-advanced/bipbop_16x9_variant.m3u8"><button type="button">Load</button><br>
-	<input type="text" name="url2" size="100" value="https://d2zihajmogu5jn.cloudfront.net/bipbop-advanced/bipbop_16x9_variant.m3u8"><button type="button">Load</button><br>
-	<button type="button">Shuffle</button>
-</body>
+  <body>
+    <h1>My first HLS player</h1>
+
+    <!-- Replace player window with a video tag -->
+    <video
+      id="my-player"
+      class="video-js"
+      controls
+      preload="auto"
+      data-setup="{}"
+    >
+      <source src="https://d2zihajmogu5jn.cloudfront.net/bipbop-advanced/bipbop_16x9_variant.m3u8" type="application/x-mpegURL" />
+    </video>
+
+    <script>
+      var player = videojs("my-player");
+      player.play();
+    </script>
+
+    <!-- Initialize VideoJS -->
+    <script>
+      var player = videojs("my-video");
+    </script>
+
+    <!-- Add playback buttons -->
+    <button type="button" onclick="player.play()">Play</button>
+    <button type="button" onclick="player.pause()">Pause</button>
+    <button type="button" onclick="player.currentTime(0)">Stop</button>
+    <button type="button" onclick="player.currentTime(player.currentTime() + 5)">Jump to 5 sec forward</button>
+    <button type="button" onclick="player.currentTime(player.currentTime() - 5)">Jump to 5 sec backwards</button>
+
+    <!-- Add playlist inputs and buttons  -->
+    <p>Playlist</p>
+    <input type="text" name="url1" size="100" value="https://d2zihajmogu5jn.cloudfront.net/bipbop-advanced/bipbop_16x9_variant.m3u8" /><button type="button">Load</button><br>
+    <input type="text" name="url2" size="100" value="https://d2zih" />
+  </body>
 </html>
